# ICPPROJECT

./: Cargo.toml  qrcode_backend.did
src/: core.rs  lib.rs
